--- a/jpIdem-spring4/src/main/resources/META-INF/sqlprops/mysql.properties
+++ b/jpIdem-spring4/src/main/resources/META-INF/sqlprops/mysql.properties
@@ -1,4 +1,5 @@
 INSERT_SQL=insert into sys_retry_task (identity_name,params,status,remark,create_date)values(?,?,?,?,now())
 UPDATE_SQL=update sys_retry_task set status=?,retry_count=?,remark=?,edit_date=now() where task_id=?
 QUERY_NEEDRETRYTASK_LIST_SQL=select task_id TaskId,identity_name IdentityName,params Params,status Status,retry_count RetryCount,remark Remark,create_date CreateDate from sys_retry_task where identity_name=? and status=1 and retry_count<? and create_date<=?
+QUERY_RETRY_TOTAL_COUNT_SQL=select task_id from sys_retry_task where identity_name=? and status in (1,3)
 PRIMARY_KEY=task_id
