--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
     <name>jpIdem-job</name>
     <url>https://github.com/hadoop002/jpIdem-job</url>
-    <description>Smart Retry主要是用来进行任务重试的。Smart Retry最大的特点是异步重试，支持持久化，系统重启之后可以继续重试。</description>
+    <description>JpIdem Job主要是用来进行任务重试的。JpIdem Job最大的特点是异步重试，支持持久化，系统重启之后可以继续重试。</description>
 
     <modules>
         <module>jpIdem-core</module>
@@ -250,6 +250,29 @@
                 <configuration>
                     <generateBackupPoms>false</generateBackupPoms>
                 </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <!--这部分可有可无,加上的话则直接生成可运行jar包-->
+                    <!--<archive>-->
+                    <!--<manifest>-->
+                    <!--<mainClass>${exec.mainClass}</mainClass>-->
+                    <!--</manifest>-->
+                    <!--</archive>-->
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
+                        <phase>package</phase> <!-- 指定在打包节点执行jar包合并操作 -->
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
