--- a/jpIdem-samples/pom.xml
+++ b/jpIdem-samples/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.mty.jls</groupId>
+        <groupId>io.github.jiangeeq</groupId>
         <artifactId>jpIdem-job</artifactId>
-        <version>1.3.7</version>
+        <version>1.3.8</version>
     </parent>
 
     <artifactId>jpIdem-samples</artifactId>
@@ -41,7 +41,7 @@
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.mty.jls</groupId>
+            <groupId>io.github.jiangeeq</groupId>
             <artifactId>jpIdem-spring4</artifactId>
             <version>${project.version}</version>
         </dependency>
