--- a/jpIdem-spring4/pom.xml
+++ b/jpIdem-spring4/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.mty.jls</groupId>
+        <groupId>io.github.jiangeeq</groupId>
         <artifactId>jpIdem-job</artifactId>
-        <version>1.3.7</version>
+        <version>1.3.8</version>
     </parent>
 
     <artifactId>jpIdem-spring4</artifactId>
@@ -22,11 +22,11 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.mty.jls</groupId>
+            <groupId>io.github.jiangeeq</groupId>
             <artifactId>jpIdem-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.mty.jls</groupId>
+            <groupId>io.github.jiangeeq</groupId>
             <artifactId>jpIdem-serializer-jackson2</artifactId>
         </dependency>
         <dependency>
