--- a/jpIdem-spring4/pom.xml
+++ b/jpIdem-spring4/pom.xml
@@ -71,6 +71,12 @@
             <artifactId>tomcat-annotations-api</artifactId>
             <version>9.0.39</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.redisson/redisson -->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.16.6</version>
+        </dependency>
     </dependencies>
 
 </project>
