--- a/jpIdem-samples/src/main/resources/application.properties
+++ b/jpIdem-samples/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://localhost:3306/jxpas?characterEncoding=utf8&autoReconnect=true&useSSL=false
+
+spring.redis.host=localhost
+spring.redis.port=6379
